--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         <h3>
 <a name="beta-testers" class="anchor" href="#beta-testers"><span class="octicon octicon-link"></span></a>Beta Testers</h3>
 
-<p>If you're willing to test this game join our <a href="http://www.google.pt">G+ community</a>.
+<p>If you're willing to test this game join our <a href="https://plus.google.com/u/0/communities/108591828744392169850">G+ community</a>.
 Then follow these steps:</p>
 
 <pre><code>Search for the "About this community"
